[package]
name = "code_projet"
version = "0.1.0"
edition = "2021"


[dependencies]
nalgebra = "0.27.1"
rand = "0.8.4"
rand_distr = "0.4.2"
threshold-secret-sharing = "0.2"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
num-bigint = "0.4.5"
num-traits = "0.2.19"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.5"



[target.'cfg(target_os = "windows")'.dependencies]
tfhe = { version = "0.6.1", features = ["boolean", "shortint", "integer", "x86_64"] }

[target.'cfg(target_os = "macos")'.dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
rustnomial = "0.3.2"




