[package]
name = "test_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
nalgebra = "0.25.1"
rand = "0.3.*"
rand_distr = "0.4.2"
threshold-secret-sharing = "0.2"



[target.'cfg(target_os = "windows")'.dependencies]
tfhe = { version = "0.6.1", features = ["boolean", "shortint", "integer", "x86_64"] }

[target.'cfg(target_os = "macos")'.dependencies]
tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
rustnomial = "0.3.2"

